--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -154,7 +154,7 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 835px) {
   .form-container {
     flex-direction: column;
     gap: 10px;
